# databricks_industrial_digital_twin

./: .databricks-resources.json  .gitignore  GIT_COMMIT  README.md  app.yaml  databricks.yml  deploy.sh  dev.sh  pyproject.toml  requirements.txt  startup.py
app/backend/: main.py
app/backend/api/: websocket.py
app/backend/services/: lakebase_service.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx
configs/: assembly_line_3station.yaml  beverage_bottling_line.yaml  data_center_build.yaml  dc_lpt1.yaml  electric_vehicle_assembly_plant.yaml  ev_battery_pack.yaml  pharmaceutical_tablets_lpt1.yaml  smt_electronics_assembly.yaml  steel_mini_mill.yaml
configs/whatif/assembly_line_3station/: test3.json  (+1 more)
docs/: DEPLOYMENT.md  databricks_industrial_digital_twin_guide.html
resources/: app.yml
scripts/: grant_sp_permissions.sh  health_check.py  lakebase_schema.sql  setup_lakebase.py
src/engine/: config.py  engine.py  loader.py  models.py  plan_builder.py  recorder.py  resource_manager.py  scheduler.py  spatial.py  state_graph.py
tasks/: backlog_migrate_to_databricks_app.md
tasks/backlog/: complete-deployment-automation.md  gltf-equipment-models.md  named-what-if-scenarios.md  per-equipment-telemetry.md  plan-builder-text-to-config.md  scenario-panel-unified-tabs.md  scenario-panel-ux.md  scenario-results-report.md  what-if-anomaly-parametrization.md
tests/: test_api.py  test_engine.py  test_loader.py  test_plan_builder.py  test_recorder.py  test_resource_manager.py  test_spatial.py  test_state_graph.py
(+49 files in other folders)
